--- a/bin/requirements.txt
+++ b/bin/requirements.txt
@@ -1,118 +1,8 @@
 aioeasywebdav==2.4.0
 aiohttp==2.1.0
-appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
-argcomplete @ file:///home/conda/feedstock_root/build_artifacts/argcomplete_1618899916290/work
-argh @ file:///home/conda/feedstock_root/build_artifacts/argh_1595627874344/work
-argparse-manpage-birdtools==1.6
-async-timeout==3.0.1
-bam2fasta @ file:///opt/conda/conda-bld/bam2fasta_1602378474820/work
-biopython @ file:///home/conda/feedstock_root/build_artifacts/biopython_1622747238197/work
-bird-tool-utils==0.2.17
-brotlipy==0.7.0
-bz2file==0.98
-certifi==2021.5.30
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1625835287197/work
-chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1610093477613/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1621503698523/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
-coloredlogs @ file:///home/conda/feedstock_root/build_artifacts/coloredlogs_1626901380262/work
-colormath==3.0.0
-commonmark==0.9.1
-ConfigArgParse @ file:///home/conda/feedstock_root/build_artifacts/configargparse_1633358864834/work
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1616851478720/work
-cycler==0.10.0
-dataclasses @ file:///home/conda/feedstock_root/build_artifacts/dataclasses_1602075176424/work
-decorator==4.4.2
-deepTools @ file:///opt/conda/conda-bld/deeptools_1615994437470/work
-deeptoolsintervals==0.1.9
-deprecation @ file:///home/conda/feedstock_root/build_artifacts/deprecation_1589881437857/work
-dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1623610058511/work
-docutils @ file:///home/conda/feedstock_root/build_artifacts/docutils_1610127750459/work
-dropbox @ file:///home/conda/feedstock_root/build_artifacts/dropbox_1643889541961/work
-ecdsa @ file:///home/conda/feedstock_root/build_artifacts/ecdsa_1622145559160/work
-extern==0.4.1
-filechunkio==1.6
-ftputil==3.2
-future @ file:///home/conda/feedstock_root/build_artifacts/future_1610147328086/work
-gffutils @ file:///opt/conda/conda-bld/gffutils_1595723346622/work
-humanfriendly @ file:///home/conda/feedstock_root/build_artifacts/humanfriendly_1626888015924/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1630267465156/work
-interlap @ file:///home/conda/feedstock_root/build_artifacts/interlap_1601883199577/work
-intervaltree==3.0.2
-iva==1.0.9
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1621419064915/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1633637554808/work
-kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1612282412546/work
-Liftoff @ file:///opt/conda/conda-bld/liftoff_1642791773749/work
-llvmlite==0.36.0
-lzstring==1.0.4
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1614595805172/work
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1621455668064/work
-matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1611858699142/work
-multidict @ file:///home/conda/feedstock_root/build_artifacts/multidict_1633329770033/work
-multiprocess @ file:///home/conda/feedstock_root/build_artifacts/multiprocess_1623774455243/work
-multiqc @ file:///opt/conda/conda-bld/multiqc_1625470754377/work
-ncbi-genome-download==0.3.1
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1617499744980/work
-numba==0.53.1
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1626681920064/work
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
+matplotlib=3.3.4 
+biopython=1.79
+numpy==1.19.5
 pandas==1.1.5
-paramiko==1.18.2
-parasail @ file:///opt/conda/conda-bld/parasail-python_1645476851851/work
-pathos @ file:///home/conda/feedstock_root/build_artifacts/pathos_1623937754918/work
-Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1630696616009/work
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1630471917451/work
-ply==3.11
-pox @ file:///home/conda/feedstock_root/build_artifacts/pox_1623773830989/work
-ppft @ file:///home/conda/feedstock_root/build_artifacts/ppft_1623774454681/work
-prettytable==2.5.0
-psutil==4.4.2
-py2bit==0.3.0
-pyBigWig==0.3.18
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-pycrypto @ file:///home/conda/feedstock_root/build_artifacts/pycrypto_1602428652824/work
-pyecharts==1.9.1
-pyfaidx @ file:///opt/conda/conda-bld/pyfaidx_1643663716255/work
-pyfastaq==3.17.0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1629119114968/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
-pyparsing==2.4.7
 pysam==0.16.0.1
-pysftp==0.2.9
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1610291458349/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
-PyYAML==5.4.1
 quast==5.0.2
-RagTag @ file:///opt/conda/conda-bld/ragtag_1635711736845/work
-ratelimiter @ file:///home/conda/feedstock_root/build_artifacts/ratelimiter_1602593436172/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
-rich @ file:///home/conda/feedstock_root/build_artifacts/rich_1630257183552/work
-scikit-learn==0.24.2
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1604304777848/work
-screed==1.0.4
-simplejson==3.8.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-snakemake==4.3.0
-sortedcontainers @ file:///home/conda/feedstock_root/build_artifacts/sortedcontainers_1621217038088/work
-sourmash @ file:///opt/conda/conda-bld/sourmash_1589037931889/work
-spectra==0.0.11
-stone @ file:///home/conda/feedstock_root/build_artifacts/stone_1643284666238/work
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1626090218611/work
-threadpoolctl==3.1.0
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1610094701020/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1632160078689/work
-typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1622748266870/work
-ujson @ file:///home/conda/feedstock_root/build_artifacts/ujson_1632399183793/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1624634538755/work
-vRhyme @ file:///data/12T/fp/software/vRhyme
-wcwidth==0.2.5
-wrapt @ file:///home/conda/feedstock_root/build_artifacts/wrapt_1602463278798/work
-xlrd==2.0.1
-xlwt==1.3.0
-yarl==0.10.3
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1625284368454/work
